<resources>
    <string name="app_name">BloodCrowd</string>
    <string name="title_activity_menu_main">menu_main</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="a_carregar_dados">A Carregar dados...</string>
    <string name="a_carregar">A carregar...</string>
    <string name="data_de_nascimento">Data de nascimento:</string>
    <string name="idade">Idade:</string>
    <string name="anos">Anos</string>
    <string name="imc">IMC:</string>
    <string name="telefone">Telefone:</string>
    <string name="cidade">Cidade:</string>
    <string name="rua">Rua:</string>
    <string name="codigo_postal">Codigo Postal:</string>
    <string name="empregador">Empregador:</string>
    <string name="ocupa_o">Ocupação:</string>
    <string name="genero">Genero:</string>
    <string name="peso">Peso:</string>
    <string name="altura">Altura:</string>
    <string name="email">Email:</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="termo_a_pesquisar">Termo a pesquisar</string>
    <string name="procurar">Procurar</string>
    <string name="procurar_top_menu">Procurar</string>
    <string-array name="lista_procurar">
        <item>Nome</item>
        <item>Idade</item>
        <item>Grupo Sanguíneo</item>
        <item>Compatibilidade com Grupo Sanguíneo</item>
        <item>>= IMC</item>
        <item>&lt;= IMC</item>
    </string-array>


</resources>
